k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mnist-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mnist
  template:
    metadata:
      labels:
        app: mnist
    spec:
      containers:
        - name: mnist-api
          image: ml-mnist-kubernetes-ml-mnist-kube:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "2"           # 2 CPUs for the container
              memory: "2Gi"
              nvidia.com/gpu: 1
            requests:
              cpu: "1"           # kubernetes will ensure at least 1 CPU is available
              memory: "1Gi"
      tolerations:
        - key: "nvidia.com/gpu"
          operator: "Exists"
          effect: "NoSchedule"
