k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mnist-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: mnist.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mnist-service
                port:
                  number: 8000
